<resources>
    <string name="app_name">MonnyFree</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="amount">Amount</string>
    <string name="monthYear">Mon YYYY</string>
    <string name="dateDisplayFormat">ddd, dd Mmm YYYY</string>
    <string name="dateDisplayFormat2">dd Mmm YYYY</string>
    <string name="summary">Summary</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="period_balance">Period Balance</string>
    <string name="cumulative_balance">Cumulative Balance</string>
    <string name="no_data">No Data</string>
    <string name="no_amount">0.00</string>
    <string name="zero">0</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="passcode">Passcode</string>
    <string name="notification">Notification</string>
    <string name="sound">Sound</string>
    <string name="functions">Functions</string>
    <string name="ic_erase">Del</string>
    <string name="default_date">Duration: d mmm - d mmm</string>
    <string name="current_expense_no_data">Current Expense 0.00</string>
    <string name="give_up">Give Up</string>
    <string name="add_expense_activity">Add Expense Activity</string>
    <string name="account_activity">Accounts</string>
    <string name="description">Description</string>
    <string name="category_list">Category List</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_asd">asd</string>
    <string name="operator_divide">÷</string>
    <string name="operator_multiply">x</string>
    <string name="operator_subtract">-</string>
    <string name="opeator_equals">=</string>
    <string name="operator_add">+</string>
    <string name="date_label">Date</string>
    <string name="today">Today</string>
    <string name="arrow_right"><![CDATA[>]]></string>
    <string name="add_photo">Add Photo</string>
    <string name="save">Save</string>
    <string name="no_title" />
    <string name="input_amount">Please input an amount</string>
    <string name="no_image">Image not selected</string>
    <string name="empty" />
    <string name="crop_message">Crop image</string>
    <string name="edit_category">Edit Category</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="category">category</string>
    <string name="amount_lbl">Amount:</string>
    <string name="category_lbl">Category:</string>
    <string name="default_category_text">Food</string>
    <string name="date_lbl">Date:</string>
    <string name="description_lbl">Description:</string>
    <string name="Delete">Delete</string>
    <string name="recurring_dialog_title">Set Recurring Dates</string>
    <string name="set_recurring_dates">Set Recurring Dates</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="recurring_mode">Recurring Mode</string>
    <string name="monthly">Monthly</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="new_expense">Add expense</string>
    <string name="delete_content">Delete this entry?</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="select_category">Please select a category</string>
    <string name="confirm">Confirm</string>
    <string name="input_budget">Input Budget</string>
    <string name="no_budget_records">No Budget Records</string>
    <string name="prev_b">Prev. B</string>
    <string name="prev_exp">Prev. Exp.</string>
    <string name="remaining_amount">0.00/ Remaining</string>
    <string name="budget_amount">0.00/ Budget</string>
    <string name="account_book_name">Account Book Name</string>
    <string name="currency">Currency</string>
    <string name="abv">XXX</string>
    <string name="no_records">0 record</string>
    <string name="appName">MonnyFree</string>
    <string name="edit_monthly_budget">Edit Monthly Budget</string>
    <string name="default_account">Default Account</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="default_currency">GBP</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris viverra venenatis odio nec dapibus. Maecenas non bibendum massa. Donec maximus purus et laoreet efficitur. Mauris dui lorem, suscipit non ligula at, scelerisque tincidunt augue. Mauris condimentum tellus pulvinar egestas egestas. Suspendisse nec justo sagittis, varius massa in, ornare magna. Cras sapien justo, malesuada a finibus eu, porttitor vel neque. Suspendisse potenti. Nulla ultricies justo at lectus viverra, a efficitur dui commodo.</string>
    <string name="long_text">This is a long text</string>
    <string name="clear">Clear</string>
</resources>
