<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/std_padding"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/set_recurring_dates"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/from"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/txtViewFrom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dateDisplayFormat"
            android:textColor="@color/monny_default"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold"
            tools:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/to"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/txtViewTo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/dateDisplayFormat"
            android:textColor="@color/monny_default"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold"
            tools:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/recurring_mode"
            tools:textAlignment="center" />

        <TextView
            android:id="@+id/txtViewMonth"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/monthly"
            android:textColor="@color/monny_default"
            android:textSize="@dimen/text_normal_size"
            android:textStyle="bold"
            tools:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dbSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border_no_stroke"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/number_picker"
        android:id="@+id/number_picker_layout"
        android:visibility="gone" />
</LinearLayout>