<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_border">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/account_container"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_account"
                    app:srcCompat="@drawable/ic_edit_red" />

                <ImageView
                    android:id="@+id/iv_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/gallery" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/account_container"
                android:layout_toRightOf="@+id/account_container"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtViewAccountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_book_name" />

                <TextView
                    android:id="@+id/txtViewCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_quarter_margin"
                    android:layout_marginTop="@dimen/standard_half_margin"
                    android:text="@string/currency" />

                <ImageView
                    android:id="@+id/iv_selected_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    app:srcCompat="@mipmap/gallery_colored" />

                <TextView
                    android:id="@+id/txtDefaultAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/monny_default"
                    android:textStyle="bold"
                    tools:text="@string/default_account"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtViewAbv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txtViewNumberOfRecords"
                android:layout_alignRight="@+id/txtViewNumberOfRecords"
                android:layout_centerVertical="true"
                android:text="@string/abv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtViewNumberOfRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="17dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/no_records" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>